[package]
name = "newsroom"
version = "0.1.0"
authors = ["leprov_a"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
reqwest = { version = "0.11.1", features = ["blocking"] }
thiserror = "1.0.24"
anyhow = "1.0.38"
scraper = "0.12.0"
rayon = "1.5.0"
rss = "1.10.0"
